// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SpecDialog matches snapshot no initSpec 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-0"
        aria-modal="true"
        class="bp6-dialog spec-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-0"
          >
            test
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="code-editor spec-dialog-textarea"
          style="width: 100%; height: 500px;"
        >
          <div
            class="cm-editor"
          >
            <!-- Code editor, language: hjson, value: "", placeholder: "{ JSON spec... }" -->
          </div>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp6-button bp6-disabled bp6-intent-primary"
              disabled=""
              tabindex="-1"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`SpecDialog matches snapshot with initSpec 1`] = `
<div
  class="bp6-portal"
>
  <div
    aria-live="polite"
    class="bp6-overlay bp6-overlay-open bp6-overlay-scroll-container"
  >
    <div
      class="bp6-overlay-start-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
    <div
      class="bp6-overlay-backdrop bp6-overlay-appear bp6-overlay-appear-active"
    />
    <div
      class="bp6-dialog-container bp6-overlay-content bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    >
      <div
        aria-labelledby="title-bp-dialog-1"
        aria-modal="true"
        class="bp6-dialog spec-dialog"
        role="dialog"
      >
        <div
          class="bp6-dialog-header"
        >
          <h2
            class="bp6-heading"
            id="title-bp-dialog-1"
          >
            test
          </h2>
          <button
            aria-label="Close"
            class="bp6-button bp6-minimal bp6-dialog-close-button"
            type="button"
          >
            <span
              aria-hidden="true"
              class="bp6-icon bp6-icon-small-cross"
            >
              <svg
                data-icon="small-cross"
              />
            </span>
          </button>
        </div>
        <div
          class="code-editor spec-dialog-textarea"
          style="width: 100%; height: 500px;"
        >
          <div
            class="cm-editor"
          >
            <!-- Code editor, language: hjson, value: "{\\n  \\"type\\": \\"some-spec\\"\\n}" -->
          </div>
        </div>
        <div
          class="bp6-dialog-footer"
        >
          <div
            class="bp6-dialog-footer-actions"
          >
            <button
              class="bp6-button"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Close
              </span>
            </button>
            <button
              class="bp6-button bp6-intent-primary"
              type="button"
            >
              <span
                class="bp6-button-text"
              >
                Submit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      class="bp6-overlay-end-focus-trap bp6-overlay-appear bp6-overlay-appear-active"
      tabindex="0"
    />
  </div>
</div>
`;
